--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,16 +1,33 @@
+/* Light Weight */
 @font-face {
-  font-family: "ExpoArabicBold";
-  src: url("./assets/Fonts/ExpoArabic-Bold.otf") format("opentype");
-  font-weight: normal;
+  font-family: 'Expo Arabic';
+  src: url('./fonts/ExpoArabicLight.woff2') format('woff2');
+  font-weight: 300; /* Maps to 'light' */
   font-style: normal;
 }
 
-/* Optional: make it global */
-body {
-  font-family: "ExpoArabicBold", sans-serif;
+/* Regular Weight  */
+@font-face {
+  font-family: 'Expo Arabic';
+  src: url('./fonts/ExpoArabicRegular.woff2') format('woff2');
+  font-weight: 400; /* Maps to 'normal' */
+  font-style: normal;
+}
+/* semibold Weight */
+@font-face {
+  font-family: 'Expo Arabic';
+  src: url('./fonts/ExpoArabicBold.woff2') format('woff2');
+  font-weight: 600; /* Maps to 'semibold' */
+  font-style: normal;
 }
 
-
-footer {
-  font-family: "ExpoArabicBold", sans-serif;
+/* Bold Weight */
+@font-face {
+  font-family: 'Expo Arabic';
+  src: url('./fonts/ExpoArabicBold.woff2') format('woff2');
+  font-weight: 700; /* Maps to 'bold' */
+  font-style: normal;
+}
+* {
+  font-family: 'Expo Arabic', sans-serif !important;
 }
